# bifrost

./: .gitignore  docker-compose.yml  package.json
app/: globals.css  navbar.tsx  navbar2.tsx
app/log/: page.tsx
app/new/: page.tsx
app/projects/: page.tsx
app/users/: page.tsx
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  header.tsx  layout.tsx  makeData.ts  navbar.tsx  page.tsx  page2.tsx  page_tanstack_table.tsx
frontend/app/lineage/: flow.tsx  page.tsx  page2.tsx
frontend/app/log/: page.tsx
frontend/app/new/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/read_topics/: page.tsx
frontend/app/request/: page.tsx
frontend/app/request/new_project/: page.tsx
frontend/app/users/: page.tsx
frontend/app/write_topics/: page.tsx
frontend/components/: graph.tsx  link.tsx
nginx/: nginx.conf
