[tool.isort]
profile = "black"

[tool.poetry]
name = "bifrost"
version = "0.1.0"
description = "Data product portal"
authors = ["Robbert Hofman <robbert.hofman@dataminded.com>"]
#readme = "README.md"
#packages = [{include = "../"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
# Add your dev dependencies here, like
# pytest = "^6.0.1"
black = "^23.7.0"

